wip(harness): preserve current state before harness-plus-root-build cleanup